Source/WebCore/platform/audio/gstreamer/WebKitWebAudioSourceGStreamer.cpp
@@ -24,7 +24,7 @@
 #if ENABLE(WEB_AUDIO) && USE(GSTREAMER)
 
 #include "AudioBus.h"
-#include "AudioDestination.h"
+#include "AudioDestinationGStreamer.h"
 #include "AudioIOCallback.h"
 #include "AudioUtilities.h"
 #include "GStreamerCommon.h"
@@ -59,7 +59,7 @@ static GstStaticPadTemplate srcTemplate = GST_STATIC_PAD_TEMPLATE("src",
 struct _WebKitWebAudioSrcPrivate {
     gfloat sampleRate;
     AudioBus* bus;
-    AudioDestination* provider;
+    AudioDestinationGStreamer* destination;
     guint framesToPull;
     guint bufferSize;
 
@@ -79,9 +79,13 @@ struct _WebKitWebAudioSrcPrivate {
     GRefPtr<GstBufferPool> pool;
 
     bool enableGapBufferSupport;
+    bool hasRenderedAudibleFrame { false };
 
-    Optional<Function<void(Function<void()>&&)>> dispatchToRenderThreadCallback;
-    Lock dispatchMutex;
+    Lock dispatchToRenderThreadLock;
+    Function<void(Function<void()>&&)> dispatchToRenderThreadFunction;
+
+    bool dispatchDone;
+    Lock dispatchLock;
     Condition dispatchCondition;
 
     _WebKitWebAudioSrcPrivate()
@@ -105,7 +109,7 @@ struct _WebKitWebAudioSrcPrivate {
 enum {
     PROP_RATE = 1,
     PROP_BUS,
-    PROP_PROVIDER,
+    PROP_DESTINATION,
     PROP_FRAMES
 };
 
@@ -116,7 +120,7 @@ static void webKitWebAudioSrcConstructed(GObject*);
 static void webKitWebAudioSrcSetProperty(GObject*, guint propertyId, const GValue*, GParamSpec*);
 static void webKitWebAudioSrcGetProperty(GObject*, guint propertyId, GValue*, GParamSpec*);
 static GstStateChangeReturn webKitWebAudioSrcChangeState(GstElement*, GstStateChange);
-static void webKitWebAudioSrcLoop(WebKitWebAudioSrc*);
+static void webKitWebAudioSrcRenderIteration(WebKitWebAudioSrc*);
 
 static GstCaps* getGStreamerMonoAudioCaps(float sampleRate)
 {
@@ -185,10 +189,8 @@ static void webkit_web_audio_src_class_init(WebKitWebAudioSrcClass* webKitWebAud
                                     g_param_spec_pointer("bus", "bus",
                                                          "Bus", flags));
 
-    g_object_class_install_property(objectClass,
-                                    PROP_PROVIDER,
-                                    g_param_spec_pointer("provider", "provider",
-                                                         "Provider", flags));
+    g_object_class_install_property(objectClass, PROP_DESTINATION, g_param_spec_pointer("destination", "destination",
+        "Destination", flags));
 
     g_object_class_install_property(objectClass,
                                     PROP_FRAMES,
@@ -203,12 +205,12 @@ static void webKitWebAudioSrcConstructed(GObject* object)
     WebKitWebAudioSrcPrivate* priv = src->priv;
 
     ASSERT(priv->bus);
-    ASSERT(priv->provider);
+    ASSERT(priv->destination);
     ASSERT(priv->sampleRate);
 
     gst_element_add_pad(GST_ELEMENT(src), priv->sourcePad);
 
-    priv->task = adoptGRef(gst_task_new(reinterpret_cast<GstTaskFunction>(webKitWebAudioSrcLoop), src, nullptr));
+    priv->task = adoptGRef(gst_task_new(reinterpret_cast<GstTaskFunction>(webKitWebAudioSrcRenderIteration), src, nullptr));
     gst_task_set_lock(priv->task.get(), &priv->mutex);
 
     priv->interleave = gst_element_factory_make("audiointerleave", nullptr);
@@ -260,8 +262,8 @@ static void webKitWebAudioSrcSetProperty(GObject* object, guint propertyId, cons
     case PROP_BUS:
         priv->bus = static_cast<AudioBus*>(g_value_get_pointer(value));
         break;
-    case PROP_PROVIDER:
-        priv->provider = static_cast<AudioDestination*>(g_value_get_pointer(value));
+    case PROP_DESTINATION:
+        priv->destination = static_cast<AudioDestinationGStreamer*>(g_value_get_pointer(value));
         break;
     case PROP_FRAMES:
         priv->framesToPull = g_value_get_uint(value);
@@ -285,8 +287,8 @@ static void webKitWebAudioSrcGetProperty(GObject* object, guint propertyId, GVal
     case PROP_BUS:
         g_value_set_pointer(value, priv->bus);
         break;
-    case PROP_PROVIDER:
-        g_value_set_pointer(value, priv->provider);
+    case PROP_DESTINATION:
+        g_value_set_pointer(value, priv->destination);
         break;
     case PROP_FRAMES:
         g_value_set_uint(value, priv->framesToPull);
@@ -297,22 +299,19 @@ static void webKitWebAudioSrcGetProperty(GObject* object, guint propertyId, GVal
     }
 }
 
-static Optional<Vector<GRefPtr<GstBuffer>>> webKitWebAudioSrcAllocateBuffersAndRenderAudio(WebKitWebAudioSrc* src)
+static Optional<Vector<GRefPtr<GstBuffer>>> webKitWebAudioSrcAllocateBuffers(WebKitWebAudioSrc* src)
 {
     WebKitWebAudioSrcPrivate* priv = src->priv;
 
     ASSERT(priv->bus);
-    ASSERT(priv->provider);
-    if (!priv->provider || !priv->bus) {
-        GST_ELEMENT_ERROR(src, CORE, FAILED, ("Internal WebAudioSrc error"), ("Can't start without provider or bus"));
+    ASSERT(priv->destination);
+    if (!priv->destination || !priv->bus) {
+        GST_ELEMENT_ERROR(src, CORE, FAILED, ("Internal WebAudioSrc error"), ("Can't start without destination or bus"));
         gst_task_stop(src->priv->task.get());
         return WTF::nullopt;
     }
 
     ASSERT(priv->pool);
-    GstClockTime timestamp = gst_util_uint64_scale(priv->numberOfSamples, GST_SECOND, priv->sampleRate);
-    priv->numberOfSamples += priv->framesToPull;
-    GstClockTime duration = gst_util_uint64_scale(priv->numberOfSamples, GST_SECOND, priv->sampleRate) - timestamp;
 
     Vector<GRefPtr<GstBuffer>> channelBufferList;
     channelBufferList.reserveInitialCapacity(priv->sources.size());
@@ -329,8 +328,6 @@ static Optional<Vector<GRefPtr<GstBuffer>>> webKitWebAudioSrcAllocateBuffersAndR
         }
 
         ASSERT(buffer);
-        GST_BUFFER_TIMESTAMP(buffer.get()) = timestamp;
-        GST_BUFFER_DURATION(buffer.get()) = duration;
         GstMappedBuffer mappedBuffer(buffer.get(), GST_MAP_READWRITE);
         ASSERT(mappedBuffer);
         mappedBuffers.uncheckedAppend(WTFMove(mappedBuffer));
@@ -338,45 +335,40 @@ static Optional<Vector<GRefPtr<GstBuffer>>> webKitWebAudioSrcAllocateBuffersAndR
         channelBufferList.uncheckedAppend(WTFMove(buffer));
     }
 
+    return makeOptional(channelBufferList);
+}
+
+static void webKitWebAudioSrcRenderAndPushFrames(GRefPtr<GstElement>&& element, Vector<GRefPtr<GstBuffer>>&& channelBufferList)
+{
+    auto* src = WEBKIT_WEB_AUDIO_SRC(element.get());
+    auto* priv = src->priv;
+
+    ASSERT(channelBufferList.size() == priv->sources.size());
+
+    GstClockTime timestamp = gst_util_uint64_scale(priv->numberOfSamples, GST_SECOND, priv->sampleRate);
+    priv->numberOfSamples += priv->framesToPull;
+    GstClockTime duration = gst_util_uint64_scale(priv->numberOfSamples, GST_SECOND, priv->sampleRate) - timestamp;
+
     AudioIOPosition outputTimestamp;
-    auto clock = adoptGRef(gst_element_get_clock(GST_ELEMENT_CAST(src)));
-    if (clock) {
+    if (auto clock = adoptGRef(gst_element_get_clock(element.get()))) {
         auto clockTime = gst_clock_get_time(clock.get());
         outputTimestamp.position = Seconds::fromNanoseconds(timestamp);
         outputTimestamp.timestamp = MonotonicTime::fromRawSeconds(static_cast<double>((g_get_monotonic_time() + GST_TIME_AS_USECONDS(clockTime)) / 1000000.0));
     }
 
     // FIXME: Add support for local/live audio input.
+    priv->destination->callRenderCallback(nullptr, priv->bus, priv->framesToPull, outputTimestamp);
 
-    if (src->priv->dispatchToRenderThreadCallback.hasValue()) {
-        LockHolder holder(priv->dispatchMutex);
-        (*priv->dispatchToRenderThreadCallback)([src, outputTimestamp]() mutable {
-            auto* priv = src->priv;
-            priv->provider->callRenderCallback(nullptr, priv->bus, priv->framesToPull, outputTimestamp);
-            priv->dispatchCondition.notifyOne();
-        });
-        priv->dispatchCondition.wait(priv->dispatchMutex);
-    } else
-        priv->provider->callRenderCallback(nullptr, priv->bus, priv->framesToPull, outputTimestamp);
-
-    return makeOptional(channelBufferList);
-}
-
-static void webKitWebAudioSrcLoop(WebKitWebAudioSrc* src)
-{
-    WebKitWebAudioSrcPrivate* priv = src->priv;
-
-    Optional<Vector<GRefPtr<GstBuffer>>> channelBufferList = webKitWebAudioSrcAllocateBuffersAndRenderAudio(src);
-    if (!channelBufferList) {
-        gst_task_stop(src->priv->task.get());
-        return;
+    if (!priv->hasRenderedAudibleFrame && !priv->bus->isSilent()) {
+        priv->destination->notifyIsPlaying(true);
+        priv->hasRenderedAudibleFrame = true;
     }
-
-    ASSERT(channelBufferList->size() == priv->sources.size());
 
     bool failed = false;
     for (unsigned i = 0; i < priv->sources.size(); ++i) {
-        auto& buffer = channelBufferList.value()[i];
+        auto& buffer = channelBufferList[i];
+        GST_BUFFER_TIMESTAMP(buffer.get()) = outputTimestamp.position.nanoseconds();
+        GST_BUFFER_DURATION(buffer.get()) = duration;
 
         if (priv->enableGapBufferSupport && priv->bus->channel(i)->isSilent())
             GST_BUFFER_FLAG_SET(buffer.get(), GST_BUFFER_FLAG_GAP);
@@ -391,25 +383,65 @@ static void webKitWebAudioSrcLoop(WebKitWebAudioSrc* src)
             // FLUSHING and EOS are not errors.
             if (ret < GST_FLOW_EOS || ret == GST_FLOW_NOT_LINKED)
                 GST_ELEMENT_ERROR(src, CORE, PAD, ("Internal WebAudioSrc error"), ("Failed to push buffer on %s flow: %s", GST_OBJECT_NAME(appsrc.get()), gst_flow_get_name(ret)));
-            gst_task_stop(src->priv->task.get());
+            gst_task_stop(priv->task.get());
             failed = true;
         }
+    }
+
+    {
+        LockHolder lock(priv->dispatchLock);
+        priv->dispatchDone = true;
+        priv->dispatchCondition.notifyOne();
+    }
+}
+
+static void webKitWebAudioSrcRenderIteration(WebKitWebAudioSrc* src)
+{
+    auto* priv = src->priv;
+    auto channelBufferList = webKitWebAudioSrcAllocateBuffers(src);
+    if (!channelBufferList) {
+        gst_task_stop(priv->task.get());
+        return;
+    }
+
+    {
+        LockHolder lock(priv->dispatchLock);
+        priv->dispatchDone = false;
+    }
+
+    auto locker = tryHoldLock(priv->dispatchToRenderThreadLock);
+    if (!locker || !priv->dispatchToRenderThreadFunction)
+        return;
+
+    priv->dispatchToRenderThreadFunction([channels = WTFMove(*channelBufferList), protectedThis = GRefPtr<GstElement>(GST_ELEMENT_CAST(src))]() mutable {
+        webKitWebAudioSrcRenderAndPushFrames(WTFMove(protectedThis), WTFMove(channels));
+    });
+
+    {
+        LockHolder lock(priv->dispatchLock);
+        if (!priv->dispatchDone)
+            priv->dispatchCondition.wait(priv->dispatchLock);
     }
 }
 
 static GstStateChangeReturn webKitWebAudioSrcChangeState(GstElement* element, GstStateChange transition)
 {
     GstStateChangeReturn returnValue = GST_STATE_CHANGE_SUCCESS;
-    WebKitWebAudioSrc* src = WEBKIT_WEB_AUDIO_SRC(element);
+    auto* src = WEBKIT_WEB_AUDIO_SRC(element);
+    auto* priv = src->priv;
+
+#if GST_CHECK_VERSION(1, 14, 0)
+    GST_DEBUG_OBJECT(element, "%s", gst_state_change_get_name(transition));
+#endif
 
     switch (transition) {
     case GST_STATE_CHANGE_NULL_TO_READY:
-        if (!src->priv->interleave) {
+        if (!priv->interleave) {
             gst_element_post_message(element, gst_missing_element_message_new(element, "audiointerleave"));
             GST_ELEMENT_ERROR(src, CORE, MISSING_PLUGIN, (nullptr), ("no audiointerleave"));
             return GST_STATE_CHANGE_FAILURE;
         }
-        src->priv->numberOfSamples = 0;
+        priv->numberOfSamples = 0;
         break;
     default:
         break;
@@ -423,26 +455,28 @@ static GstStateChangeReturn webKitWebAudioSrcChangeState(GstElement* element, Gs
 
     switch (transition) {
     case GST_STATE_CHANGE_READY_TO_PAUSED: {
-        GST_DEBUG_OBJECT(src, "READY->PAUSED");
-
-        src->priv->pool = gst_buffer_pool_new();
-        GstStructure* config = gst_buffer_pool_get_config(src->priv->pool.get());
-        gst_buffer_pool_config_set_params(config, nullptr, src->priv->bufferSize, 0, 0);
-        gst_buffer_pool_set_config(src->priv->pool.get(), config);
-        if (!gst_buffer_pool_set_active(src->priv->pool.get(), TRUE))
+        priv->pool = gst_buffer_pool_new();
+        GstStructure* config = gst_buffer_pool_get_config(priv->pool.get());
+        gst_buffer_pool_config_set_params(config, nullptr, priv->bufferSize, 0, 0);
+        gst_buffer_pool_set_config(priv->pool.get(), config);
+        if (!gst_buffer_pool_set_active(priv->pool.get(), TRUE))
             returnValue = GST_STATE_CHANGE_FAILURE;
-        else if (!gst_task_start(src->priv->task.get()))
+        else if (!gst_task_start(priv->task.get()))
             returnValue = GST_STATE_CHANGE_FAILURE;
         break;
     }
     case GST_STATE_CHANGE_PAUSED_TO_READY:
-        GST_DEBUG_OBJECT(src, "PAUSED->READY");
-
-        gst_buffer_pool_set_flushing(src->priv->pool.get(), TRUE);
-        if (!gst_task_join(src->priv->task.get()))
+        {
+            LockHolder lock(priv->dispatchLock);
+            priv->dispatchDone = false;
+            priv->dispatchCondition.notifyAll();
+        }
+        gst_buffer_pool_set_flushing(priv->pool.get(), TRUE);
+        if (!gst_task_join(priv->task.get()))
             returnValue = GST_STATE_CHANGE_FAILURE;
-        gst_buffer_pool_set_active(src->priv->pool.get(), FALSE);
-        src->priv->pool = nullptr;
+
+        gst_buffer_pool_set_active(priv->pool.get(), FALSE);
+        priv->pool = nullptr;
         break;
     default:
         break;
@@ -451,10 +485,10 @@ static GstStateChangeReturn webKitWebAudioSrcChangeState(GstElement* element, Gs
     return returnValue;
 }
 
-void webkitWebAudioSourceSetDispatchToRenderThreadCallback(WebKitWebAudioSrc* src, Function<void(Function<void()>&&)>&& function)
+void webkitWebAudioSourceSetDispatchToRenderThreadFunction(WebKitWebAudioSrc* src, Function<void(Function<void()>&&)>&& function)
 {
-    ASSERT(function);
-    src->priv->dispatchToRenderThreadCallback = WTFMove(function);
+    auto locker = holdLock(src->priv->dispatchToRenderThreadLock);
+    src->priv->dispatchToRenderThreadFunction = WTFMove(function);
 }
 
 #endif // ENABLE(WEB_AUDIO) && USE(GSTREAMER)
